--- a/.env
+++ b/.env
@@ -1,24 +1,29 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:P8Pe+zC+9nMHlSUmwoeTppdiz2JedU/xX2d6it5SzWw=
+APP_KEY=base64:HibpNm6Lp+ejcAIJldkL8/EjG36TkqN15RRJLg9ZuMU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-#DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=vlog
-#DB_USERNAME=root
-#DB_PASSWORD=
-
 DB_CONNECTION=mysql
-DB_HOST=db4free.net
+#DB_CONNECTION=sqlite
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=jiawei20
-DB_USERNAME=jiawei20
-DB_PASSWORD=jiawei20
+DB_DATABASE=vlog
+DB_USERNAME=root
+DB_PASSWORD=
+
+#Hash Pass = $2y$10$kDhqETSY7jF5sjVnuBaW6OWUrnR2uicridGLX1EQSMJ/2PB7PXVuy
+
+YOUTUBE_API_KEY = AIzaSyAhcCeAbG-c04lF2LNwGsJkP2sR5SzJ-w8
+
+#DB_CONNECTION=mysql
+#DB_HOST=db4free.net
+#DB_PORT=3306
+#DB_DATABASE=jiawei20
+#DB_USERNAME=jiawei20
+#DB_PASSWORD=jiawei20
 
 
 BROADCAST_DRIVER=log
