--- a/.env
+++ b/.env
@@ -6,17 +6,7 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-#DB_CONNECTION=sqlite
-#DB_HOST=127.0.0.1
-DB_HOST=db4free.net
-DB_DATABASE=jiawei20
-DB_USERNAME=jiawei20
-DB_PASSWORD=jiawei20
-#DB_DATABASE=vlog
-#DB_USERNAME=root
-#DB_PASSWORD=
-DB_PORT=3306
+DB_CONNECTION=sqlite
 
 #Hash Pass = $2y$10$kDhqETSY7jF5sjVnuBaW6OWUrnR2uicridGLX1EQSMJ/2PB7PXVuy
 
