--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=development
 APP_KEY=base64:HibpNm6Lp+ejcAIJldkL8/EjG36TkqN15RRJLg9ZuMU=
 APP_DEBUG=true
+APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+
 
 LOG_CHANNEL=stack
 
