--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "alaouy/youtube": "^2.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "ext-pdo_sqlite": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
