--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=development
+APP_ENV=production
 APP_KEY=base64:HibpNm6Lp+ejcAIJldkL8/EjG36TkqN15RRJLg9ZuMU=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
